# IB_PP_BG_HJ-PNW

./: .gitignore  README.md  main.py  pyproject.toml  ruff.toml
data/processed/: dataset_CPP_1to1_test.csv  dataset_CPP_1to1_train.csv  dataset_CPP_1to2_test.csv  dataset_CPP_1to2_train.csv
results/aac/: cv_folds.csv  summary.csv
results/classic_ml_results/: classic_ml_dpc_cv_folds.csv  classic_ml_dpc_summary.csv
results/classical_ml/aac/: cv_folds.csv  summary.csv
results/classical_ml/dpc/: cv_folds.csv  summary.csv
results/classical_ml/physicochemical/: cv_folds.csv  summary.csv
results/cnn/: cv_folds.csv  summary.csv
results/dl/: cv_folds.csv  summary.csv
results/mlp/: cv_folds.csv  summary.csv
results/one_class/: one_class_cv_folds.csv  one_class_summary.csv
results/one_class/aac/: cv_folds.csv  summary.csv
results/one_class_results/: one_class_cv_folds.csv
results/physicochemical/: cv_folds.csv  summary.csv
results/plots/: MCC_barplot  boxplot.py
results/statistics/: wilcoxon_results_balanced_accuracy.csv  wilcoxon_results_f1.csv  wilcoxon_results_mcc.csv
src/: constants.py  paths.py
src/experiments/: aac.py  classical_ml.py  cnn.py  configs.py  dl.py  dpc.py  mlp.py  one_class.py  physicochemical.py
src/model_helpers/: classic_ml.py  fold_train.py  one_class.py  pytorch.py
src/plots/: plots.py
src/preprocessing/: constatns.py  dataset_preprocessing.py  extract_embeddings.py  load.py  paths.py  run.py  run_preprocessing.py
src/statistics/: tests.py
src/utils/: load_data.py  metrics.py  representations.py  runner.py  summary.py
(+6 files in other folders)
